crates/jsonschema-macros/tests/ui/invalid_pattern_properties_regex.stderr
error: Invalid `patternProperties` regular expression: (
 --> tests/ui/invalid_pattern_properties_regex.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"patternProperties":{"(":{}}}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
