crates/jsonschema-macros/tests/ui/invalid_pattern_properties_regex.rs
#[jsonschema::validator(schema = r#"{"patternProperties":{"(":{}}}"#)]
struct Validator;

fn main() {}
